# controller/members.js
@@ -12,14 +12,14 @@ class MembersController {
   membersService = new MembersService();
 
   SignupMember = async (req, res, next) => {
-    try {
-      const { id, nickname, password, confirm } = req.body;
-      await schema.validateAsync(req.body);
-      await this.membersService.createMember(id, nickname, password, confirm);
-      res.status(201).json({ message: "회원가입이 완료되었습니다." });
-    } catch (e) {
-      res.status(400).json({ message: e.message });
-    }
+    // try {
+    const { id, nickname, password, confirm } = req.body;
+    await schema.validateAsync(req.body);
+    await this.membersService.createMember(id, nickname, password, confirm);
+    res.status(201).json({ message: "회원가입이 완료되었습니다." });
+    // } catch (e) {
+    //   res.status(400).json({ message: e.message });
+    // }
   };
 
   LoginMember = async (req, res, next) => {
@@ -38,15 +38,14 @@ class MembersController {
   };
 
   updateMember = async (req, res, next) => {
-
-    try {      
+    try {
       const { userId } = res.locals.user;
       const { nickname, password, confirm } = req.body;
       await schema.validateAsync(req.body);
       const UpdateMember = await this.membersService.updateMember(
         userId,
         nickname,
-        password,        
+        password,
         confirm
       );
       res
